# v0.9-beta.3
## Change
- Upgraded FACT-Finder WebComponents to version 1.2.14

# v0.9-beta.2
## CHANGE
- add `unresolved` attribute to all components html in order to prevent rendering it before transformation into functional web components

## ADD
- Added possibility to choose which customer group prices have to be selected at product export. By default is `non logged`


# v0.9-beta.1
## FIX
- removed the product limit on feed export
- returns simple product sku as master product number when it has a relation to nonexistent configurable product

## CHANGE
- test connection functionality now uses data send from form with no need to save the configuration before checking the connection

## ADD
- allow user to choose which visibilities should be applied to collection filter
- divide product collection into batches in order to prevent memory exhaustion on product collection load